test/libyul/yulSyntaxTests/builtin_identifier_3.yul
{
	function f(x) { f(add) }
}
// ----
// ParserError 7104: (21-24='add'): Builtin function "add" must be called.
